# hack-editor

./: .gitignore  Dockerfile  Setup.hs  docker-entrypoint.sh  hack-editor.cabal  proc.cabal  stack.yaml
app/: Main.hs
docker/: docker-compose.yml  simple-gateway.yml
fay/: ACEditor.hs  Config.hs  DOMUtils.hs  FPromise.hs  File.hs  FilePath.hs  HTTP.hs  Proc.hs  ProcAPI.hs  RFile.hs  Regex.hs  SimpleJSON.hs  Term.hs  TermManager.hs  Utils.hs  editor.hs
public/: build.sh  config.sample.js  editor.css  editor.js  foreign.js  index.html
public/ace/: ace.js
public/api/: main.js  package.json  webpack.config.js
public/css/: editor.css
public/js/: config.sample.js  editor.js  foreign.js
public/js/ace/: ace.js
public/jstree/themes/default/: style.min.css
public/uikit/css/: uikit.min.css
public/xterm/: main.js  package.json
source/: .gitignore
source/public/: README.md
source/system/: concat.py  concat.sh  exec.py  exec.sh  kill_proc.py  kill_proc.sh  reload_angel.py  reload_angel.sh
src/: HackEditor.hs  Proc.hs
test/: Spec.hs
