name:                hack-editor
version:             0.1.0.0
synopsis:            A simple editor for hack.
description:         Please see README.md
homepage:            https://github.com/Lupino/hack-editor#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            Tools,Web,Editor
build-type:          Custom
extra-source-files:  fay/*.hs
cabal-version:       >=1.10
data-files:          fay/*.hs

x-fay-packages:      fay-dom
x-fay-root-modules:  editor
x-fay-include-paths: fay/src
x-fay-output-dir:    public
x-fay-source-dir:    fay

library
  hs-source-dirs:      src
  exposed-modules:     HackEditor
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , aeson
                     , text
                     , unordered-containers
                     , bytestring
                     , process-extras

                     , posix-pty
                     , process
                     , stm
                     , websockets
                     , utf8-string

                     , Glob

                     -- required by fay compiler
                     , fay
                     , fay-dom
  default-language:    Haskell2010

executable hack-editor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-editor
                     , scotty
                     , streaming-commons
                     , wai
                     , wai-extra
                     , wai-websockets
                     , network
                     , warp
                     , transformers
                     , filepath
                     , text
                     , aeson
                     , wai-middleware-static
                     , mime-types
                     , bytestring
                     , optparse-applicative
                     , zip-archive
                     , directory
                     , http-types

                     , websockets
                     , unix
                     , aeson
                     , base64-bytestring
  default-language:    Haskell2010

test-suite hack-editor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hack-editor
                     , Glob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/hack-editor
